style container fix

--- a/styles.css
+++ b/styles.css
@@ -377,6 +377,7 @@ text {
         order: 2;
         width: 100%;
         height: auto;
+        padding: 1rem 0.5rem;
     }
 
     /* Makes the controls take full width */
